# api-lottos

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260312201734_create_categories_table.py  20260312214545_expand_categories_add_prize_rules.py  20260312215047_add_slug_to_categories.py
app/: config.py  database.py  main.py  worker.py
app/models/: __init__.py  category.py
app/routers/: categories.py
app/schemas/: category.py
app/tasks/: categories.py
app/utils/: slug.py
docs/: 01-setup.md  02-tests.md  03-models-and-migrations.md  04-seeds.md  05-endpoints-categories.md  06-celery-flower.md
docs/tasks/: 01-categories.md  02-authentication.md  03-draws.md  04-bets.md  05-results.md  06-statistics.md
seeds/: categories.py  runner.py
tests/: conftest.py  test_health.py
